--- a/views/detail/sale.hbs
+++ b/views/detail/sale.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../../public/css/sale.css">
 <div class="container-fluid">
   <div class="row" id="banner">
     <img src="/public/img/Screen Shot 2019-12-12 at 18.55.13.png"
