--- a/views/detail/shoppingCart.hbs
+++ b/views/detail/shoppingCart.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../../public/css/Cart.css">
 <div class="container-fluid" id="header">
     <div class="row" style="position: relative; border-bottom-style: solid; border-width: 1px;">
 
