--- a/views/detail/about.hbs
+++ b/views/detail/about.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../../public/css/about.css">
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6" id="about-paragraph">
