--- a/views/detail/product.hbs
+++ b/views/detail/product.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../../public/css/product.css">
 <div class="container-fluid">
   <div class="row" id="product-process">
     <div class="col-md-5">
