--- a/views/detail/searchResult.hbs
+++ b/views/detail/searchResult.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../../public/css/search.css">
 <div class="row">
   <div class="col-2 avd-search" style="background-color: gray">
     <p><b>LỌC SẢN PHẨM</b></p>
