--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,24 +9,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../../public/css/Cart.css">
-  <link rel="stylesheet" href="../../public/css/about.css">
   <link rel="stylesheet" href="../../public/css/footer.css">
   <link rel="stylesheet" href="../../public/css/header.css">
+  {{!-- <link rel="stylesheet" href="../../public/css/Cart.css">
+  <link rel="stylesheet" href="../../public/css/about.css">
+  
   <link rel="stylesheet" href="../../public/css/product.css">
   <link rel="stylesheet" href="../../public/css/sale.css">
-  <link rel="stylesheet" href="../../public/css/search.css">
+  <link rel="stylesheet" href="../../public/css/search.css"> --}}
 
   <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  {{>header}}
-  {{{body}}}
-  {{>footer}}
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
+  {{>header}}
+  {{{body}}}
+  {{>footer}}
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
