add view and view detail

--- a/views/detail/sale.hbs
+++ b/views/detail/sale.hbs
@@ -17,178 +17,26 @@
   <div class="row" id="hot-sales">
     <div class="container">
       <div class="row">
+        {{#each sneakers}}
+        
         <div class="col-md-3">
+          <a href="/product/{{id}}">
           <div class="card">
             <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
+              <h6 class="card-title">{{name}}</h6>
               <div class="row" id="price">
                 <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
+                <p id="old-price card-text">{{price}}đ</p>
+                <p id="new-price card-text">-{{price}}đ</p>
               </div>
             </div>
           </div>
+          </a>
         </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h6 class="card-title">Air J.ordan 1 x Off-White x Retro High OG Chicago</h6>
-              <div class="row" id="price">
-                <h6>GIÁ:</h6>
-                <p id="old-price card-text">1,790,000₫</p>
-                <p id="new-price card-text">1,253,000₫</p>
-              </div>
-            </div>
-          </div>
-        </div>
+
+        {{/each}}
       </div>
     </div>
   </div>
