--- a/views/detail/signUp.hbs
+++ b/views/detail/signUp.hbs
@@ -1,58 +1,63 @@
     <link rel="stylesheet" href="css/Login.css">
 
-    
+
     <div id="includedHeader"></div>
     <div class="Login">
 
-        <div class="class=container-fluid">
-            <div class="row ">
+      <div class="class=container-fluid">
+        <div class="row ">
 
-                <div class="col-4 "></div>
-                <div class="col-4 login_Form ">
-                    <form style="margin-top:0%;">
-                        <div class="form-group ">
-                            <img src="img/icon_KHTN.png " alt="icon_KHTN " class="icon_KHTN ">
-                            <label for="exampleInputEmail1 "
-                                style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
-                                VIỆN</label>
-                        </div>
-                        <div class="form-group ">
-                            <label for="exampleInputEmail1 ">Tên tài khoản</label>
-                            <input type="email " class="form-control " id="exampleInputEmail1 "
-                                aria-describedby="emailHelp " placeholder="Nhập email ">
-                            <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ dah
-                                tính của bạn.</small>
-                        </div>
-                        <div class="form-group ">
-                            <label for="exampleInputPassword1 ">Mật khẩu</label>
-                            <input type="password" id="defaultForm-pass" class="form-control validate"
-                                placeholder="Nhập mật khẩu">
-                        </div>
-                        <div class="form-group ">
-                            <label for="exampleInputPassword1 ">Xác nhận lại mật khẩu</label>
-                            <input type="password" id="defaultForm-pass" class="form-control validate"
-                                placeholder="Nhập lại mật khẩu">
-                        </div>
-                        <div class="form-group ">
-                            <label for="exampleInputEmail1 ">Email sinh viên / giảng viên</label>
-                            <input type="email " class="form-control " id="exampleInputEmail1 "
-                                aria-describedby="emailHelp " placeholder="Enter email ">
-                        </div>
-                        <div class="row">
-
-                            <div class="col-5">
-                            </div>
-
-                            <div class="col-2"></div>
-                            <div class="col-5">
-                                <button type="submit " class="btn btn-primary " style="float: right;"><a
-                                        href="/index" style="color:white;text-decoration:none;">Đăng kí</a></button>
-                            </div>
-                        </div>
-                    </form>
+          <div class="col-4 "></div>
+          <div class="col-4 login_Form ">
+            <form style="margin-top:0%;" action="/user/signUp" id="signUpForm" method="POST">
+              <div class="form-group ">
+                <img src=" " alt="icon " class="icon ">
+                <label for="exampleInputEmail1 "
+                  style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
+                  VIỆN</label>
+              </div>
+              {{#if message}}
+              <div class="form-group alert {{type}}">
+                <strong>{{message}}</strong>
+              </div>
+              {{/if}}
+              <div class="form-group ">
+                <label for="fullname ">Tên </label>
+                <input type="text" class="form-control " id="fullname" aria-describedby="emailHelp "
+                  placeholder="Nhập tên ">
+                <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ dah
+                  tính của bạn.</small>
+              </div>
+              <div class="form-group ">
+                <label for="password ">Mật khẩu</label>
+                <input type="password" id="password" class="form-control validate" placeholder="Nhập mật khẩu">
+              </div>
+              <div class="form-group ">
+                <label for="confirmPassword ">Xác nhận lại mật khẩu</label>
+                <input type="password" id="confirmPassword" class="form-control validate"
+                  placeholder="Nhập lại mật khẩu">
+              </div>
+              <div class="form-group ">
+                <label for="username ">Email sinh viên / giảng viên</label>
+                <input type="email " class="form-control " id="username " aria-describedby="emailHelp "
+                  placeholder="Enter email ">
+              </div>
+              <div class="row">
+                <div class="col-7">
+                  <input type="checkbox" id="keepLoggedIn" name="keepLoggedIn">
+                  <label for="keepLoggedIn">Keep me logged in</label>
                 </div>
-            </div>
+                <div class="col-5">
+                  <button type="submit " class="btn btn-primary " style="float: right;" value="submit">Dang ki
+                    {{!-- <a href="/index"
+                                        style="color:white;text-decoration:none;">Đăng kí</a> --}}
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
 
 
