--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -34,10 +34,10 @@
           <a class="nav-link" href="">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">ĐĂNG KÍ</a>
+          <a class="nav-link" href="/user/signUp">ĐĂNG KÍ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">ĐĂNG NHẬP</a>
+          <a class="nav-link" href="/user/login">ĐĂNG NHẬP</a>
         </li>
       </ul>
     </div>
