--- a/views/detail/product.hbs
+++ b/views/detail/product.hbs
@@ -71,7 +71,9 @@
     <h3>Sản phẩm tương tự:</h3>
     <div class="row">
       {{#each same}}
+      
       <div class="col-md-4">
+        <a href="/product/{{id}}">
         <div class="card">
           <img class="card-img-top" src="/public/img/Air-Jordan-1-Retro-High-Off-White-Chicago-Product.jpg"
             alt="Card image cap">
@@ -84,7 +86,9 @@
             </div>
           </div>
         </div>
+        </a>
       </div>
+
       {{/each}}
     </div>
   </div>
