--- a/views/detail/signUp.hbs
+++ b/views/detail/signUp.hbs
@@ -10,12 +10,6 @@
           <div class="col-4 "></div>
           <div class="col-4 login_Form ">
             <form style="margin-top:0%;" action="/user/signUp" id="signUpForm" method="POST">
-              <div class="form-group ">
-                <img src=" " alt="icon " class="icon ">
-                <label for="exampleInputEmail1 "
-                  style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
-                  VIỆN</label>
-              </div>
               {{#if message}}
               <div class="form-group alert {{type}}">
                 <strong>{{message}}</strong>
@@ -23,10 +17,8 @@
               {{/if}}
               <div class="form-group ">
                 <label for="fullname ">Tên </label>
-                <input type="text" class="form-control " id="fullname" aria-describedby="emailHelp "
-                  placeholder="Nhập tên ">
-                <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ dah
-                  tính của bạn.</small>
+                <input type="text" class="form-control " id="fullname" placeholder="Nhập tên ">
+                <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ danh tính của bạn.</small>
               </div>
               <div class="form-group ">
                 <label for="password ">Mật khẩu</label>
@@ -48,7 +40,7 @@
                   <label for="keepLoggedIn">Keep me logged in</label>
                 </div>
                 <div class="col-5">
-                  <button type="submit " class="btn btn-primary " style="float: right;" value="submit">Dang ki
+                  <button type="submit " class="btn btn-primary " style="float: right;" value="Submit">Dang ki
                     {{!-- <a href="/index"
                                         style="color:white;text-decoration:none;">Đăng kí</a> --}}
                   </button>
