--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,10 +7,10 @@
                     </h5> -->
     <div></div>
     <div class="CartButton" style=" position: absolute; right: 0; z-index: 1;">
-      <a href="">
-        <img src="../../public/img/Icon_Cart.png" alt="Shopping cart" style="width: 70px; height:70px;">
-      </a>
-
+        <button><i class="ti-shopping-cart"></i><span class="nav-shop__circle" id="cart-badge">{{totalQuantity}}</span>
+          <img src="../../public/img/Icon_Cart.png" alt="Shopping cart" style="width: 70px; height:70px;">
+        </button>
+        
     </div>
   </div>
 
