--- a/views/detail/product.hbs
+++ b/views/detail/product.hbs
@@ -31,24 +31,25 @@
       <h5>SỐ LƯỢNG</h5>
       <div class="input-group">
         <input type="button" value="-" class="button-minus" data-field="quantity">
-        <input type="number" step="1" max="" value="1" name="quantity" class="quantity-field">
+        <input type="number" step="1" max="" value="1" name="quantity" class="quantity-field" id="sst" readonly>
         <input type="button" value="+" class="button-plus" data-field="quantity">
       </div>
       <div class="row" id="total">
         <h5>Tổng tiền:</h5>
-        <p>1,253,000₫</p>
+        <p>{{price}}₫</p>
       </div>
-      <button>THÊM VÀO GIỎ HÀNG</button>
+      <button class="add-to-cart" data-id="{{id}}">THÊM VÀO GIỎ HÀNG</button>
     </div>
   </div>
   <div class="row" id="product-review">
     <div id="details">
       <h3>Thông tin bổ sung: </h3>
-      <p>Size : 36, 37, 38, 39, 40, 41, 42, 43, 44<br>
-        Thương hiệu : Nike<br>
+      <p>Size : 36, 37, 38, 39, 40, 41, 42, 43, 44 <br>
+      
+        Thương hiệu : {{brandName}}<br>
         Product Cat : Apparel & Accessories > Shoe Accessories<br>
-        Giới : Nam, Nữ<br>
-        Màu sắc : Đỏ<br>
+        Giới : {{gender}}<br>
+        Màu sắc : {{color}}<br>
       </p>
     </div>
     <div id="review">
