--- a/views/detail/shoppingCart.hbs
+++ b/views/detail/shoppingCart.hbs
@@ -1,67 +1,4 @@
 <link rel="stylesheet" href="../../public/css/Cart.css">
-<div class="container-fluid" id="header">
-    <div class="row" style="position: relative; border-bottom-style: solid; border-width: 1px;">
-
-        <h1 style="margin-left: 0;margin-right: 0;font-size: 35px;">SNEAKERS SALES WEBSITE</h1>
-        <!--<h5 style="margin-top: 5px; margin-left: 15px">Đại học Khoa học tự nhiên<br>Khoa Công nghệ
-                        thông tin
-                    </h5> -->
-        <div></div>
-        <div class="CartButton" style=" position: absolute; right: 0; z-index: 1;">
-            <a href="">
-                <img src="../public/img/Icon_Cart.png" alt="shopping cart" style="width: 70px; height: 70px;">
-            </a>
-
-        </div>
-    </div>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">TRANG CHỦ</a><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">BAND</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">COLLECTION</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">ĐĂNG KÍ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">ĐĂNG NHẬP</a>
-                </li>
-            </ul>
-        </div>
-        <div class="quicksearch">
-            <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample"
-                aria-expanded="false" aria-controls="collapseExample" id="search">
-            </button>
-        </div>
-        <div class="" id="quicksearch-hidden" hidden=true>
-            <div class="input-group">
-                <input type="text" class="form-control" id="searchInput">
-                <div class="input-group-append">
-                    <a class="input-group-text" href="#" id="searchClose">
-                        <img src="img/search_button.png" alt=""><img src="../public/img/Icon_close.jpg" alt=""
-                            style="width: 20px;height: 20px;">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </nav>
-</div>
-
-
 
 <div class="cartInfo">
     <div class="container-fluid">
@@ -76,7 +13,7 @@
         {{#with cart}}
         <div class="products">
             {{#each items}}
-            <div class="row">
+            <div class="row" id="item{{item.id}}">
                 <div class="col-lg-1 product-remove">
                     <img src="../public/img/remove_icon.png" alt="" style="width:50px; height:50px;margin-top: 10px;">
                 </div>
@@ -87,15 +24,17 @@
                 <div class="col-lg-3 product-name">{{item.name}}</div>
                 <div class="col-lg-2 product-price">{{item.price}} đ</div>
                 <div class="col-lg-2 product-quantity">
-                    <input type="button" value="-" class="button-minus" data-field="quantity" onclick="var result = document.getElementById('sst{{item.id}}'); var sst=result.value; if(!isNaN(sst)) result.value++; updateCart({{item.id}},result.value); return false;">
+                    <input type="button" value="-" class="button-minus" data-field="quantity" onclick="var result = document.getElementById('sst{{item.id}}'); var sst=result.value; if(!isNaN(sst)) result.value--; updateCart({{item.id}},result.value); return false;">
                     <input type="number" step="1" max="" value={{quantity}} name="quantity" class="quantity-field" id="sst{{item.id}}" style="width: 50px;" readonly>
                     <input type="button" value="+" class="button-plus" data-field="quantity" onclick="var result = document.getElementById('sst{{item.id}}'); var sst=result.value; if(!isNaN(sst)) result.value++; updateCart({{item.id}},result.value); return false;">
                 </div>
-                <div class="col-lg-2 product-subtotal">{{price}} đ</div>
+                <div class="col-lg-2 product-subtotal" id="price{{item.id}}">{{price}} đ</div>
 
             </div>
             {{/each}}
         </div>
+
+        {{!-- <div id="totalPrice"></div> --}}
         {{/with}}
         <div class="row addCoupon">
             <div class="col-lg-9 coupon">
