--- a/views/detail/signUp.hbs
+++ b/views/detail/signUp.hbs
@@ -9,7 +9,7 @@
 
           <div class="col-4 "></div>
           <div class="col-4 login_Form ">
-            <form style="margin-top:0%;" action="/user/signUp" id="signUpForm" method="POST">
+            <form action="/user/signUp" name="signUpForm" id="signUpForm" method="POST">
               {{#if message}}
               <div class="form-group alert {{type}}">
                 <strong>{{message}}</strong>
@@ -17,26 +17,26 @@
               {{/if}}
               <div class="form-group ">
                 <label for="fullname ">Tên </label>
-                <input type="text" class="form-control " id="fullname" placeholder="Nhập tên ">
+                <input type="text" class="form-control " id="fullname" name ="fullname"  placeholder="Nhập tên ">
                 <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ danh tính của bạn.</small>
               </div>
               <div class="form-group ">
                 <label for="password ">Mật khẩu</label>
-                <input type="password" id="password" class="form-control validate" placeholder="Nhập mật khẩu">
+                <input type="password"  id="password" name ="password"  class="form-control validate" placeholder="Nhập mật khẩu">
               </div>
               <div class="form-group ">
                 <label for="confirmPassword ">Xác nhận lại mật khẩu</label>
-                <input type="password" id="confirmPassword" class="form-control validate"
+                <input type="password"  name ="confirmPassword" id="confirmPassword" class="form-control validate"
                   placeholder="Nhập lại mật khẩu">
               </div>
               <div class="form-group ">
                 <label for="username ">Email sinh viên / giảng viên</label>
-                <input type="email " class="form-control " id="username " aria-describedby="emailHelp "
+                <input type="email " class="form-control "  name ="username" id="username"
                   placeholder="Enter email ">
               </div>
               <div class="row">
                 <div class="col-7">
-                  <input type="checkbox" id="keepLoggedIn" name="keepLoggedIn">
+                  <input type="checkbox" name ="keepLoggedIn"  id="keepLoggedIn" name="keepLoggedIn">
                   <label for="keepLoggedIn">Keep me logged in</label>
                 </div>
                 <div class="col-5">
