--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -35,6 +35,9 @@
         <li class="nav-item">
           <a class="nav-link" href="">ABOUT</a>
         </li>
+        {{#if isLoggedIn}}
+        
+        {{/if}}
         <li class="nav-item">
           <a class="nav-link" href="/user/signUp">ĐĂNG KÍ</a>
         </li>
