--- a/views/detail/login.hbs
+++ b/views/detail/login.hbs
@@ -1,53 +1,50 @@
 <link rel="stylesheet" href="css/Login.css">
 <!-- Modal -->
 <div class="modal fade" id="modalForgetPassForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true" style="margin-top: 30px;">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-center">
-                <img src="../../public/img/" alt="logo" class="logo">
-                <label for="exampleInputEmail1 "
-                    style="font-size: 20px;text-align: center; padding-top: 10px; padding-left: 40px;">Sneaker Sales
-                    Website <br></label>
+  aria-hidden="true" style="margin-top: 30px;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <img src="../../public/img/" alt="logo" class="logo">
+        <label for="exampleInputEmail1 "
+          style="font-size: 20px;text-align: center; padding-top: 10px; padding-left: 40px;">Sneaker Sales
+          Website <br></label>
 
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
 
-            <div class="modal-body mx-3">
-                <div class="md-form mb-3">
-                    <label style="font-size: 30px; padding-left: 100px;">Lấy lại mật khẩu</label>
-                </div>
-
-                <div class="md-form mb-3">
-                    <label for="exampleInputEmail1 ">Tên tài khoản</label>
-                    <input type="email " class="form-control " id="exampleInputEmail1 " aria-describedby="emailHelp "
-                        placeholder="Enter email ">
-                    <small id="emailHelp " class="form-text text-muted ">VD:1753057@student.hcmus.edu.vn</small>
-                </div>
-
-                <div class="md-form mb-3">
-                    <div class="g-recaptcha" data-sitekey="6LfKURIUAAAAAO50vlwWZkyK_G2ywqE52NU7YO0S"
-                        data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback">
-                    </div>
-                    <input class="form-control d-none" data-recaptcha="true" required
-                        data-error="Please complete the Captcha">
-                    <div class="help-block with-errors"></div>
-                    <div>
-                        <small style="color: grey;">Email tạo lại mật khẩu sẽ được gửi đến hộp thư của bạn trong
-                            thời gian sớm nếu không thấy thông báo thư mới hãy kiểm tra trong mục Spam.</small>
-                    </div>
-                </div>
-
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button type="submit " class="btn btn-primary " style="float: right;"
-                    style="color:white;text-decoration:none;" data-dismiss="modal" aria-label="Close">Gửi thông
-                    tin</button>
-            </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-3">
+          <label style="font-size: 30px; padding-left: 100px;">Lấy lại mật khẩu</label>
         </div>
+
+        <div class="md-form mb-3">
+          <label for="exampleInputEmail1 ">Tên tài khoản</label>
+          <input type="email " class="form-control " name="reEmail" id="reEmail" placeholder="Enter email ">
+          <small id="emailHelp " class="form-text text-muted ">VD:1753057@student.hcmus.edu.vn</small>
+        </div>
+        <div class="md-form mb-3">
+          <div class="g-recaptcha" data-sitekey="6LfKURIUAAAAAO50vlwWZkyK_G2ywqE52NU7YO0S"
+            data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback">
+          </div>
+          <input class="form-control d-none" data-recaptcha="true" required data-error="Please complete the Captcha">
+          <div class="help-block with-errors"></div>
+          <div>
+            <small style="color: grey;">Email tạo lại mật khẩu sẽ được gửi đến hộp thư của bạn trong
+              thời gian sớm nếu không thấy thông báo thư mới hãy kiểm tra trong mục Spam.</small>
+          </div>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button type="submit " class="btn btn-primary " style="float: right;" style="color:white;text-decoration:none;"
+          data-dismiss="modal" aria-label="Close">Gửi thông
+          tin</button>
+      </div>
     </div>
+  </div>
 </div>
 
 
@@ -55,56 +52,53 @@
 
 <div class="Login">
 
-    <div class="container-fluid">
-        <div class="row ">
+  <div class="container-fluid">
+    <div class="row ">
 
-            <div class="col-4 "></div>
-            <div class="col-4 login_Form ">
-                <form style="margin-top:4%;">
-                    <div class="form-group ">
-                        <img src="img/icon_KHTN.png " alt="icon_KHTN " class="icon_KHTN ">
-                        <label for="exampleInputEmail1 "
-                            style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
-                            VIỆN</label>
-                    </div>
-                    <div class="form-group ">
-
-                        <label for="exampleInputEmail1 ">Tên tài khoản</label>
-                        <input type="email " class="form-control " id="exampleInputEmail1 "
-                            aria-describedby="emailHelp " placeholder="Nhập email ">
-                        <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ danh
-                            tính của bạn.</small>
-                    </div>
-                    <div class="form-group ">
-                        <label for="exampleInputPassword1 ">Mật khẩu</label>
-                        <input type="password" id="defaultForm-pass" class="form-control validate"
-                            placeholder="Nhập mật khẩu">
-                    </div>
-                    {{#if message}}
-                    <div class="form-group alert {{type}}">
-                        <strong>{{message}}</strong>
-                    </div>
-                    {{/if}}
-                    <div class="row">
-                        <div class="col-5">
-                            <a href="/user/signUp">Chưa có tài khoản?</a>
-
-                            <a href="" data-toggle="modal" data-target="#modalForgetPassForm">Quên mật khẩu</a>
-
-                        </div>
-
-                        <div class="col-2"></div>
-                        <div class="col-5">
-                            <button type="submit " class="btn btn-primary " style="float: right;"><a href="/index"
-                                    style="color:white;text-decoration:none;">Đăng nhập</a></button>
-                        </div>
-                    </div>
+      <div class="col-4 "></div>
+      <div class="col-4 login_Form " >
+        <form style="margin-top:4%;" action="login" method="POST">
+          <div class="form-group ">
+            <img src="img/icon_KHTN.png " alt="icon_KHTN " class="icon_KHTN ">
+            <label for="exampleInputEmail1 "
+              style="font-size: 50px;text-align: center; padding-top: 10px; padding-left: 40px;">THƯ
+              VIỆN</label>
+          </div>
+          {{#if message}}
+          <div class="form-group alert {{type}}">
+            <strong>{{message}}</strong>
+          </div>
+          {{/if}}
+          <div class="form-group ">
+            <label for="exampleInputEmail1 ">Tên tài khoản</label>
+            <input type="email " class="form-control " name="username" id="username" placeholder="Nhập email ">
+            <small id="emailHelp " class="form-text text-muted ">Chúng tôi sẽ không bao giờ tiết lộ danh
+              tính của bạn.</small>
+          </div>
+          <div class="form-group ">
+            <label for="exampleInputPassword1 ">Mật khẩu</label>
+            <input type="password" name="password" id="password" class="form-control validate" placeholder="Nhập mật khẩu">
+          </div>
+          <div class="col-12">
+                  <input type="checkbox" name ="keepLoggedIn"  id="keepLoggedIn" name="keepLoggedIn">
+                  <label for="keepLoggedIn">Keep me logged in</label>
+          </div>
+          <div class="row">
+            <div class="col-5">
+              <a href="/user/signUp">Chưa có tài khoản?</a>
+              <a href="" data-toggle="modal" data-target="#modalForgetPassForm">Quên mật khẩu</a>
             </div>
+            <div class="col-2"></div>
+            <div class="col-5">
+              <button type="submit " value="Submit" class="btn btn-primary " style="float: right;">Đăng nhập</button>
+            </div>
+          </div>
+      </div>
 
 
-            </form>
-        </div>
+      </form>
     </div>
+  </div>
 </div>
 
 
