--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -3,33 +3,8 @@
     margin-bottom: 20px;
 }
 
-.products {
-    background-color: #EFEFEF;
-    border: 1px solid #A4A4A4;
-}
-
-.product-name,
-.product-price,
-.product-quantity,
-.product-subtotal {
-    margin-top: 20px;
-}
-
-#headCart {
-    border: 1px solid #A4A4A4;
-    margin-top: 20px;
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-bottom: 20px;
-    border-bottom: 0px;
-}
-
-.addCoupon {
-    background-color: #EFEFEF;
-    border: 1px solid #A4A4A4;
-    border-top: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
+red {
+    color: red;
 }
 
 .coupon {
@@ -52,11 +27,10 @@
 .table {
     background-color: #EFEFEF;
     width: 40%;
-    table-layout: fixed;
     align-items: right;
     margin-top: 20px;
     margin-bottom: 20px;
-    float: right;
+    margin-left: 15px;
 }
 
 .table tr {
@@ -85,4 +59,14 @@ button {
     background-color: black;
     color: white;
     border: none;
+    font-size: 20px;
+}
+
+.inputInfo {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 35px;
+    border: 1px solid #A4A4A4;
+    padding: 5px;
 }
