--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="border-style: solid;border-color: white;border-top-color: #b0b0b0;">
+<div class="container-fluid" style="border-style: solid;border-color: white;border-top-color: #b0b0b0; clear:both">
   <div class="row" id="footer">
     <p>Đại Học Khoa Học Tự Nhiên <br>217 Nguyễn Văn Cừ, Quận 5, Thành Phố Hồ Chí Minh</p>
     <div class="col" id="footer-help">
