--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,7 +7,7 @@
                     </h5> -->
     <div></div>
     <div class="CartButton" style=" position: absolute; right: 0; z-index: 1;">
-        <button id="shoppingCart-button" style="background:none;"><i class="ti-shopping-cart"></i><span class="nav-shop__circle" id="cart-badge" style="float:right;">{{totalQuantity}}</span>
+        <button id="shoppingCart-button" style="background:none;"><i class="ti-shopping-cart"></i><span class="nav-shop__circle" id="cart-badge" style="float:right; color:black; font-size: 15px">{{totalQuantity}}</span>
         <a href="/shoppingcart">
           <img src="../../public/img/Icon_Cart.png" alt="Shopping cart" style="width: 50px; height:50px;">
         </a>
