--- a/views/detail/index.hbs
+++ b/views/detail/index.hbs
@@ -8,79 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/css/header.css">
-    <link rel="stylesheet" href="../public/css/footer.css">
-    <link rel="stylesheet" href="../public/css/slideshow.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
     </style>
 </head>
 
 <body>
-    <div class="container-fluid" id="header">
-        <div class="row" style="position: relative; border-bottom-style: solid; border-width: 1px;">
-
-            <h1 style="font-family: 'Roboto Mono', monospace;margin-left: 0;margin-right: 0;font-size: 35px;color:#15017E;"><img src="../public/img/logoSneaker.png" style="margin-top: -10px;width: 70px; height: 70px;">SNEAKERS SALES WEBSITE</h1>
-            <!--<h5 style="margin-top: 5px; margin-left: 15px">Đại học Khoa học tự nhiên<br>Khoa Công nghệ
-                        thông tin
-                    </h5> -->
-            <div></div>
-            <div class="CartButton" style=" position: absolute; right: 0; z-index: 1;">
-                <a href="">
-                    <img src="../public/img/Icon_Cart.png" alt="shopping cart" style="width: 70px; height: 70px;">
-                </a>
-
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">TRANG CHỦ</a><span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">BAND</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">COLLECTION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ĐĂNG KÍ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">ĐĂNG NHẬP</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="quicksearch">
-                <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="search">
-                  </button>
-            </div>
-            <div class="" id="quicksearch-hidden" hidden=true>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput">
-                    <div class="input-group-append">
-                        <a class="input-group-text" href="#" id="searchClose">
-                            <img src="img/search_button.png" alt=""><img src="../public/img/Icon_close.jpg" alt="" style="width: 20px;height: 20px;">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
+    
     <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -125,6 +59,8 @@
         </div>
     </header>
 
+    
+
     <div class="row">
         <div class="column">
             <img src="../public/img/logo/bland_logo_adidas2019ss.png" alt="Snow" style="width:100%">
@@ -152,8 +88,16 @@
         </div>
     </div>
     <div align="center">
-        Xem tất cả các thương hiệu
+        <button type="button" class="btn btn-light">Xem tất cả thương hiệu</button>
     </div>
+
+    <div style="margin-top: 30px;margin-bottom: -40px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+        <p1 class = "p1">&nbspGIÀY MỚI&nbsp
+        </p1>
+    </div>
+
+
+
     <div class="rcorners2" style="margin-top: 30px;">
         <div class="row">
             <div class="columnT">
@@ -163,53 +107,95 @@
             </div>
             <div class="columnT">
                 <img src="../public/img/sneaker/2.jpg" alt="Forest" style="width:100%">
+                <p align="center">Alphabounce beyond black 1.250.000đ
+                </p>
             </div>
             <div class="columnT">
                 <img src="../public/img/sneaker/sneak.jpg" alt="Mountains" style="width:100%">
+                <p align="center">Alphabounce Instict Tripple 990.000đ
+                </p>
             </div>
             <div class="columnT">
                 <img src="../public/img/sneaker/2.jpg" alt="Mountains" style="width:100%">
+                <p align="center">Alphabounce beyond black 1.250.000đ
+                </p>
             </div>
         </div>
+        <div align = "center">
+        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+        </div>
+    </div>
+
+    <div style="margin-top: 30px;margin-bottom: -110px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+        <p1 class = "p1">&nbspBÁN NHIỀU&nbsp
+        </p1>
     </div>
 
     <div class="rcorners2" style="margin-top: 100px;">
-
+        <div class="row">
+            <div class="columnT">
+                <img src="../public/img/sneaker/sneak.jpg" alt="Snow" style="width:100%">
+                <p align="center">Alphabounce Instict Tripple 990.000đ
+                </p>
+            </div>
+            <div class="columnT">
+                <img src="../public/img/sneaker/2.jpg" alt="Forest" style="width:100%">
+                <p align="center">Alphabounce beyond black 1.250.000đ
+                </p>
+            </div>
+            <div class="columnT">
+                <img src="../public/img/sneaker/sneak.jpg" alt="Mountains" style="width:100%">
+                <p align="center">Alphabounce Instict Tripple 990.000đ
+                </p>
+            </div>
+            <div class="columnT">
+                <img src="../public/img/sneaker/2.jpg" alt="Mountains" style="width:100%">
+                <p align="center">Alphabounce beyond black 1.250.000đ
+                </p>
+            </div>
+        </div>
+        <div align = "center">
+        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+        </div>
     </div>
-    <div style="margin-top: 100px;margin-left:150px">
+
+    <div style="margin-top: 60px;margin-bottom: -100px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+        <p1 class = "p1">BỘ SƯU TẬP
+        </p1>
+    </div>
+
+
+    
+    <div style="margin-top: 100px;margin-left:120px">
         <img src="../public/img/poster1.jpg">
     </div>
 
-    <div class="row" style="margin-left: 100px;margin-top: 200px">
+    <div style="margin-top: 30px;margin-bottom: -100px ;margin-left: 360px;font-size: 25px  ;font-family: Roboto Mono">
+        <p1 class = "p1">NIKE AIR - NEW WINTER COLLECTION
+        </p1>
+    </div>
+
+
+    <div class="row" style="margin-left: 80px;margin-top: 200px">
         <div class="columnS">
             <img src="../public/img/testConvese.jpg" alt=" ... " class="rounded-circle ">
+            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Converse<br>Taylor</div>
         </div>
         <div class="columnS ">
             <img src="../public/img/Giày-Nike-Air-max-97-đõ-300x300.jpg" alt=" ... " class="rounded-circle ">
+        <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Top<br>Trending</div>
         </div>
         <div class="columnS ">
             <img src="../public/img/75418993_793712877742665_6311140960398999552_n-300x300.jpg " class="rounded-circle ">
+        <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align ="center">Độc Lạ</div>
         </div>
+        
     </div>
+    <div align = "center" style ="margin-top: 10px; margin-bottom: 80px;">
+        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+        </div>
 
 
-    <div class="container-fluid " style="border-style: solid;border-color: white;border-top-color: #b0b0b0; ">
-        <div class="row " id="footer ">
-            <p style="font-family: 'Roboto Mono', monospace; margin-left: 0;margin-right: 0;font-size: 15px;color:#15017E; "><img src="../public/img/logoSneaker.png " style="margin-top: -10px;width: 40px; height: 40px;
-                ">SNEAKERS SALES WEBSITE <br style="color: black ">217 Nguyễn Văn Cừ, Quận 5,<br>TP.HCM</p>
-            <div class="col " id="footer-help ">
-                <a href="#">
-                    <h6 font-family: 'Roboto Mono', monospace;>GIỚI THIỆU TÔI VỀ SNEAKERS SALES</h6>
-                </a>
-                <a href="# ">
-                    <h6 font-family: 'Roboto Mono', monospace;>HỖ TRỢ</h6>
-                </a>
-                <a href="# ">
-                    <h6 font-family: 'Roboto Mono', monospace;>ĐIỀU KHOẢN SỬ DỤNG</h6>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <script language="javascript ">
         document.getElementById("search ").onclick = function() {
