--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,6 +1,7 @@
 <div class="container-fluid" style="border-style: solid;border-color: white;border-top-color: #b0b0b0; clear:both">
   <div class="row" id="footer">
-    <p>Đại Học Khoa Học Tự Nhiên <br>217 Nguyễn Văn Cừ, Quận 5, Thành Phố Hồ Chí Minh</p>
+   <p style="font-family: 'Roboto Mono', monospace; margin-left: 0;margin-right: 0;font-size: 15px;color:#15017E; "><img src="../public/img/logoSneaker.png " style="margin-top: 10px;width: 40px; height: 40px;
+                ">SNEAKERS SALES WEBSITE <br>217 Nguyễn Văn Cừ, Quận 5,<br>TP.HCM</p>
     <div class="col" id="footer-help">
       <a href="about.html">
         <h6>GIỚI THIỆU TÔI VỀ SNEAKERS SALES</h6>
