--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="header">
   <div class="row" style="position: relative; border-bottom-style: solid; border-width: 1px;">
 
-    <h1 style="margin-left: 0;margin-right: 0;font-size: 35px;">SNEAKERS SALES WEBSITE</h1>
+    <h1 style="font-family: 'Roboto Mono', monospace;margin-left: 0;margin-right: 0;font-size: 35px;color:#15017E;"><img src="../public/img/logoSneaker.png" style="margin-top: -10px;width: 70px; height: 70px;">SNEAKERS SALES WEBSITE</h1>
     <!--<h5 style="margin-top: 5px; margin-left: 15px">Đại học Khoa học tự nhiên<br>Khoa Công nghệ
                         thông tin
                     </h5> -->
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">TRANG CHỦ</a><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">TRANG CHỦ</a><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">BAND</a>
+          <a class="nav-link" href="/brand">BRAND</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">COLLECTION</a>
+          <a class="nav-link" href="/collection">COLLECTION</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">ABOUT</a>
